# cs-medical-rag-

./: README.md  main.py  pyproject.toml
.cursor/: docling-ingest.mdc  imp1-ingestion.mdc  project-overview.mdc
playground/embeding-L1/: realPython-embeding-a1.ipynb
playground/imp1/: config.py  ingest.py  ingest_utils.py  metadata.py  parse_pdfs.py
playground/ingest/: camolet-a1.py  docling-a1.py  docling-medical-a1.py  docling_parse_pdf.py  ingest_utils.py  mineru-a1.py  parsed_types.py
