[project]
name = "rag-finalyear-a1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "camelot-py>=1.0.9",
    "chromadb>=1.5.9",
    "docling>=2.93.0",
    "docling-core[chunking]>=2.75.0",
    "langchain>=1.3.2",
    "langchain-core>=1.4.0",
    "langchain-docling>=2.0.0",
    "langchain-huggingface>=1.2.2",
    "langchain-milvus>=0.3.3",
    "mineru[core,lmdeploy]>=3.1.15",
    "numpy>=2.4.5",
    "python-dotenv>=1.2.2",
    "scispacy>=0.5.5",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "transformers>=4.57.6",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" }]
torchvision = [{ index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" }]
